WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267278
[WebGPU] api,validation,layout_shader_compat,* is failing
https://bugs.webkit.org/show_bug.cgi?id=267278
Summary
[WebGPU] api,validation,layout_shader_compat,* is failing
Mike Wyrzykowski
Reported
2024-01-09 10:35:01 PST
[WebGPU] api,validation,layout_shader_compat,* is failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-09 10:36:26 PST
<
rdar://problem/120725330
>
Mike Wyrzykowski
Comment 2
2024-01-28 16:08:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23396
EWS
Comment 3
2024-01-29 08:47:09 PST
Committed
273659@main
(be59659f9a02): <
https://commits.webkit.org/273659@main
> Reviewed commits have been landed. Closing PR #23396 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug