[WebGPU] api,validation,layout_shader_compat,* is failing https://bugs.webkit.org/show_bug.cgi?id=267278 <radar://120725330>

Reviewed by Dan Glastonbury.

Add validation, passing expectations, and update the CTS test for layout_shader_compat.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/layout_shader_compat-expected.txt:
* LayoutTests/http/tests/webgpu/webgpu/api/validation/layout_shader_compat.spec.js:
* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::addressSpaceForBindingMember):
(WGSL::accessModeForBindingMember):
(WGSL::bindingTypeForPrimitive):
(WGSL::bindingTypeForType):
(WGSL::isBuffer):
(WGSL::isSampler):
(WGSL::isTexture):
(WGSL::isStorageTexture):
(WGSL::isExternalTexture):
(WGSL::typesMatch):
(WGSL::variableAndEntryMatch):
(WGSL::RewriteGlobalVariables::insertStructs):

Canonical link: https://commits.webkit.org/273659@main